# hbp

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  test  test.sh
include/: datanode.h  dlinkednode.h  ellipsoid.h  human.h  humanbody.h  humangenders.h  humanlimbs.h  humanratios.h  node.h
include/model/: ellipsoid.h
include/test/fixtures/: f_ellipsoid.h  f_humanratios.h  humanratios.h
include/test/fixtures/model/: f_ellipsoid.h
src/: datanode.cpp  dlinkednode.cpp  ellipsoid.cpp  human.cpp  humanbody.cpp  humanratios.cpp  main.cpp  node.cpp
test/: CMakeLists.txt  test.cpp  testbasefixture.h
test/suites/: ellispoid.cpp  humanratios.cpp
test/suites/model/: ellispoid.cpp
